# bloom42-chacha12-blake3

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.txt  Makefile  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  bashrc
.github/workflows/: benchmarks.yml  release.yml  test.yml
benchmarks/: Cargo.toml
benchmarks/benches/: chacha.rs  encrypt.rs  kdf.rs
chacha/: Cargo.toml  README.md
chacha/src/: chacha_avx512.rs  chacha_neon.rs
chacha12/: Cargo.toml  README.md
chacha12-blake3/: Cargo.toml  chacha12_blake3.rs
chacha12-blake3/tests/: mod.rs
chacha12/src/: chacha_avx2.rs  chacha_avx512.rs  chacha_neon.rs  chacha_wasm_simd128.rs  lib.rs
chacha20-blake3/: Cargo.toml  chacha20_blake3.rs
chacha20-blake3/tests/: mod.rs
