[package]
name = "chacha"
# Also update README
version = "0.1.0"
edition = "2024"
description = "Pure-Rust, SIMD-accelerated implementations of the original ChaCha20 / ChaCha12 / ChaCha8 stream ciphers with a 64-bit counter and 64-bit nonce (AVX2, AVX-512, NEON, WASM sim128)"
repository = "https://github.com/skerkour/chacha20-blake3"
license = "MIT"
keywords = ["cryptography", "chacha20", "encryption", "chacha12", "simd", "wasm", "chacha", "webassembly"]
categories = ["cryptography", "wasm", "simd"]

[features]
default = ["std", "zeroize"]

# enable runtime detection of CPU features (SIMD instructions)
std = []

# erase sensitive secrets from memory
zeroize = ["dep:zeroize"]

[dependencies]
zeroize = { workspace = true, optional = true }

[dev-dependencies]
hex = "0.4"
